# nrf91-lwm2m-client

./: .clang-format  CMakeLists.txt  prj.conf  west.yml
boards/: nrf9151dk_nrf9151_ns.overlay
include/: ecompass.h  temperature.h  time_object.h
src/: ecompass.c  lwm2m_obj_time.c  main.c  temperature.c  time.c
